Add acceptance tests for starting a call
Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -17,6 +17,7 @@ default:
         - LoginPageContext
 
         # Talk app contexts
+        - CallContext
         - ChatContext
         - ConversationInfoContext
         - ConversationListContext
