--- a/.drone.yml
+++ b/.drone.yml
@@ -151,6 +151,21 @@ pipeline:
     when:
       matrix:
         TESTS: jsunit
+  acceptance-call:
+    image: nextcloudci/acceptance-php7.1:acceptance-php7.1-2
+    commands:
+      # Pre-setup steps
+      - git clone --depth 1 -b master https://github.com/nextcloud/server ../server
+      - cp -R . ../server/apps/spreed
+      - cd ../server
+      - git submodule update --init
+      - ln --symbolic `pwd` /var/www/html
+
+      # Run acceptance tests
+      - tests/acceptance/run-local.sh --acceptance-tests-dir apps/spreed/tests/acceptance --timeout-multiplier 10 --nextcloud-server-domain acceptance-call --selenium-server selenium:4444 allow-git-repository-modifications features/call.feature
+    when:
+      matrix:
+        TESTS-ACCEPTANCE: call
   acceptance-chat:
     image: nextcloudci/acceptance-php7.1:acceptance-php7.1-2
     commands:
@@ -201,6 +216,8 @@ matrix:
       DB: pgsql
       DATABASEHOST: postgres-10
     - TESTS: jsunit
+    - TESTS: acceptance
+      TESTS-ACCEPTANCE: call
     - TESTS: acceptance
       TESTS-ACCEPTANCE: chat
     - TESTS: acceptance
