--- a/tests/integration/config/behat.yml
+++ b/tests/integration/config/behat.yml
@@ -7,6 +7,12 @@ default:
         - %paths.base%/../features
       contexts:
         - FeatureContext
+        - SharingContext:
+            baseUrl: http://localhost:8080/
+            admin:
+              - admin
+              - admin
+            regularUserPassword: 123456
 
   extensions:
       jarnaiz\JUnitFormatter\JUnitFormatterExtension:
